Update naming conventions and settings in model files.
This commit includes significant updates to the `DLaB.EarlyBoundGeneratorV2.LetsExerciseSettings.xml` file.

--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Model/Pg.LetsExercise.Model.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Model/Pg.LetsExercise.Model.csproj
@@ -100,87 +100,9 @@
     <Compile Include="Entities\pg_exerciserecord.cs" />
     <Compile Include="Entities\systemuser.cs" />
     <Compile Include="EntityOptionSetEnum.cs" />
-    <Compile Include="OptionSets\activityfileattachment_objectcode.cs" />
-    <Compile Include="OptionSets\activitypointer_activitytypecode.cs" />
-    <Compile Include="OptionSets\activitypointer_deliveryprioritycode.cs" />
-    <Compile Include="OptionSets\aioperationoverridetype.cs" />
-    <Compile Include="OptionSets\aiplugintype.cs" />
-    <Compile Include="OptionSets\botcomponentreusepolicy.cs" />
-    <Compile Include="OptionSets\botsharingroletypes.cs" />
-    <Compile Include="OptionSets\bulkemail_recipient.cs" />
-    <Compile Include="OptionSets\bulkemail_recipients.cs" />
-    <Compile Include="OptionSets\capability.cs" />
-    <Compile Include="OptionSets\chatbotlanguage.cs" />
-    <Compile Include="OptionSets\componentstate.cs" />
-    <Compile Include="OptionSets\componenttype.cs" />
-    <Compile Include="OptionSets\connectionrole_category.cs" />
-    <Compile Include="OptionSets\connectortype.cs" />
-    <Compile Include="OptionSets\convertrule_channelactivity.cs" />
-    <Compile Include="OptionSets\customapifieldtype.cs" />
-    <Compile Include="OptionSets\delete_recurringappointmentmaster.cs" />
-    <Compile Include="OptionSets\dependencytype.cs" />
-    <Compile Include="OptionSets\emailserverprofile_authenticationprotocol.cs" />
-    <Compile Include="OptionSets\field_security_permission_readunmasked.cs" />
-    <Compile Include="OptionSets\field_security_permission_type.cs" />
-    <Compile Include="OptionSets\flipswitch_options.cs" />
-    <Compile Include="OptionSets\fullsyncstate.cs" />
-    <Compile Include="OptionSets\goal_fiscalperiod.cs" />
-    <Compile Include="OptionSets\goal_fiscalyear.cs" />
-    <Compile Include="OptionSets\isinherited.cs" />
-    <Compile Include="OptionSets\knowledgearticle_expirationstate.cs" />
-    <Compile Include="OptionSets\mainfewshotentitytype.cs" />
-    <Compile Include="OptionSets\makerfewshotsqlcorrectness.cs" />
-    <Compile Include="OptionSets\metric_goaltype.cs" />
-    <Compile Include="OptionSets\mobileofflineenabledentities.cs" />
-    <Compile Include="OptionSets\msdynce_contentstate.cs" />
-    <Compile Include="OptionSets\msdyn_dataflowtemplatestate.cs" />
-    <Compile Include="OptionSets\msdyn_numberofsearchresults.cs" />
-    <Compile Include="OptionSets\mspp_columnpermissionvalues.cs" />
-    <Compile Include="OptionSets\officedocument_documenttype.cs" />
-    <Compile Include="OptionSets\onlinemeetingtype.cs" />
-    <Compile Include="OptionSets\openaischemaversion.cs" />
-    <Compile Include="OptionSets\orginsightsconfiguration_lookback.cs" />
-    <Compile Include="OptionSets\orginsightsconfiguration_plotoption.cs" />
+    <Compile Include="Messages\Pg_MonthlyResults.cs" />
     <Compile Include="OptionSets\pg_exercisegoaltypeset.cs" />
     <Compile Include="OptionSets\pg_exerciseset.cs" />
-    <Compile Include="OptionSets\photo_resolution.cs" />
-    <Compile Include="OptionSets\powerbimashupparametervaluesource.cs" />
-    <Compile Include="OptionSets\powerpagecomponenttype.cs" />
-    <Compile Include="OptionSets\powerpagelanguages.cs" />
-    <Compile Include="OptionSets\principalsyncattributemapping_syncdirection.cs" />
-    <Compile Include="OptionSets\processstage_category.cs" />
-    <Compile Include="OptionSets\rangeends_options.cs" />
-    <Compile Include="OptionSets\recurrencerule_monthofyear.cs" />
-    <Compile Include="OptionSets\registrationstatustype.cs" />
-    <Compile Include="OptionSets\repeatpattern_options.cs" />
-    <Compile Include="OptionSets\rundesktopflowconnectiontype.cs" />
-    <Compile Include="OptionSets\sameweekday_options.cs" />
-    <Compile Include="OptionSets\sameweekweek_options.cs" />
-    <Compile Include="OptionSets\searchentity.cs" />
-    <Compile Include="OptionSets\sharepointdocumentlocation_locationtype.cs" />
-    <Compile Include="OptionSets\sharepointsite_servicetype.cs" />
-    <Compile Include="OptionSets\sharepoint_validationstatus.cs" />
-    <Compile Include="OptionSets\sharepoint_validationstatusreason.cs" />
-    <Compile Include="OptionSets\socialactivity_postmessagetype.cs" />
-    <Compile Include="OptionSets\socialprofile_community.cs" />
-    <Compile Include="OptionSets\synapselinkdestinationsyncstate.cs" />
-    <Compile Include="OptionSets\synapselinkentitymetadatastate.cs" />
-    <Compile Include="OptionSets\synapselinkentitypartitionstrategy.cs" />
-    <Compile Include="OptionSets\synapselinkentitysource.cs" />
-    <Compile Include="OptionSets\synapselinkentitysyncstate.cs" />
-    <Compile Include="OptionSets\synapselinkexternaltablestate.cs" />
-    <Compile Include="OptionSets\synapselinkprofileentitytype.cs" />
-    <Compile Include="OptionSets\synapselinkprofilestate.cs" />
-    <Compile Include="OptionSets\synapselinkprofiletype.cs" />
-    <Compile Include="OptionSets\synapselinkschedulerecurrenceunit.cs" />
-    <Compile Include="OptionSets\synapselinkscheduletype.cs" />
-    <Compile Include="OptionSets\synapselinksynapsetablecreationstate.cs" />
-    <Compile Include="OptionSets\syncattributemapping_syncdirection.cs" />
-    <Compile Include="OptionSets\syncstatus.cs" />
-    <Compile Include="OptionSets\workflowlog_objecttypecode.cs" />
-    <Compile Include="OptionSets\workflow_runas.cs" />
-    <Compile Include="OptionSets\workflow_stage.cs" />
-    <Compile Include="OptionSets\yearlymonth_options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
