Update version description format in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to deploy (e.g., v1.2.3.4)'
+        description: 'Version to deploy (e.g., 1.2.3.4)'
         required: true
 
 jobs:
@@ -21,4 +21,3 @@ jobs:
       - name: Deploy to Test
         run: |
           echo "Deploying version ${{ github.event.inputs.version }} to test..."
-          cat app.txt
