--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Plugins.Tests/Pg.LetsExercise.Plugins.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Plugins.Tests/Pg.LetsExercise.Plugins.Tests.csproj
@@ -78,7 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="SampleTestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
