--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
@@ -133,11 +133,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GoalCompletionServiceTests.cs" />
+    <Compile Include="Services\InputParameterToDateServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-    <ItemGroup>
+  <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.1.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
     <Analyzer Include="..\packages\xunit.analyzers.1.7.0\analyzers\dotnet\cs\xunit.analyzers.fixes.dll" />
   </ItemGroup>
@@ -158,6 +159,6 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\xunit.core.2.6.3\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.6.3\build\xunit.core.props'))" />
     <Error Condition="!Exists('..\packages\xunit.core.2.6.3\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.6.3\build\xunit.core.targets'))" />
-   <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props'))" />
+    <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props'))" />
   </Target>
 </Project>
