Add Newtonsoft.Json support and new service tests

--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
@@ -59,6 +59,9 @@
     <Reference Include="Moq, Version=4.20.72.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.20.72\lib\net462\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NuGet.Frameworks, Version=6.5.0.154, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\NuGet.Frameworks.6.5.0\lib\netstandard2.0\NuGet.Frameworks.dll</HintPath>
     </Reference>
@@ -134,8 +137,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GoalCompletionServiceTests.cs" />
     <Compile Include="Services\InputParameterToDateServiceTests.cs" />
+    <Compile Include="Services\ParseToJsonServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
