--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/packages.config
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.59" targetFramework="net462" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.8.0" targetFramework="net462" />
   <package id="Moq" version="4.20.72" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="NuGet.Frameworks" version="6.5.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
