Add monthly results retrieval and related tests.

--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Services\GoalCompletionServiceTests.cs" />
     <Compile Include="Services\InputParameterToDateServiceTests.cs" />
     <Compile Include="Services\ParseToJsonServiceTests.cs" />
+    <Compile Include="Services\SumResultsServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
