Add xUnit core targets import for testing integration
This commit adds an import statement for the xUnit core targets file, enabling the project to utilize the xUnit testing framework if the specified file exists. This enhancement ensures that the necessary build targets for xUnit are included, improving the project's testing capabilities.

--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
@@ -167,4 +167,5 @@
     <Error Condition="!Exists('..\packages\xunit.core.2.6.3\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.6.3\build\xunit.core.targets'))" />
     <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.2.5.5\build\net462\xunit.runner.visualstudio.props'))" />
   </Target>
+  <Import Project="..\packages\xunit.core.2.6.3\build\xunit.core.targets" Condition="Exists('..\packages\xunit.core.2.6.3\build\xunit.core.targets')" />
 </Project>
