Refactor tests and services to use base classes

--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/Pg.LetsExercise.Domain.Tests.csproj
@@ -134,6 +134,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\ServiceTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GoalCompletionServiceTests.cs" />
     <Compile Include="Services\InputParameterToDateServiceTests.cs" />
